# CI-0123-PIRS-incomprendidos

./: .gitignore  README.md  firewall_cli
SafeSpace/bootstrap/: CMakeLists.txt
SafeSpace/bootstrap/src/: main.cpp
SafeSpace/bootstrap/src/controller/: appcontroller.cpp  appcontroller.h  mainwindow.ui
SafeSpace/bootstrap/src/model/: model.cpp  model.h
SafeSpace/bootstrap/src/model/data/: nodes_config.text
SafeSpace/bootstrap/src/model/filesystem/: DirEntry.h  DiskManager.cpp
SafeSpace/bootstrap/src/model/network/: RunNode.h  StopNode.h  disconnectresponse.h  qtudpclient.cpp  qtudpclient.h
SafeSpace/bootstrap/src/model/structures/: configGetMessage.cpp  configGetMessage.h  configSetMessage.cpp  configSetMessage.h  user.cpp  user.h
SafeSpace/bootstrap/src/view/: loginpage.cpp  loginpage.ui  page.cpp  page.h
SafeSpace/bootstrap/src/view/elements/: button.cpp  button.h
SafeSpace/bootstrap/src/view/nodes/: nodespage.cpp  nodespage.h  nodespage.ui
SafeSpace/client/: CMakeLists.txt
SafeSpace/client/src/: colors.h  main.cpp  resources.qrc
SafeSpace/client/src/TestSockets/: Client.cpp
SafeSpace/client/src/controller/: UserController.cpp  UserController.h  appcontroller.cpp  appcontroller.h  mainwindow.ui
SafeSpace/client/src/model/: Directory.hpp  FIleSystem.cpp  File.hpp  FileSystem.h  iNode.hpp  model.cpp  model.h  sensordata.cpp  user.cpp  user.h
SafeSpace/client/src/model/filesystem/: Directory.cpp  DiskManager.h  Diskmanager.cpp  Diskmanager.h  FIleSystem.cpp  File.cpp  FileSystem.cpp  FileSystem.h  iNode.h  iNode.hpp
SafeSpace/client/src/model/managers/: UsersManager.cpp  UsersManager.h
SafeSpace/client/src/model/network/: DeleteSensorDataRequest.h  DeleteSensorDataResponse.h  GetSensorDataResponse.h  GetSystemUsersRequest.h  GetSystemUsersResponse.h  Token.h  connectresponse.h  disconnectrequest.h  qtudpclient.cpp  qtudpclient.h
SafeSpace/client/src/model/structures/: alertMessage.cpp  alertMessage.h  authenticationresponse.h  configGetMessage.cpp  configGetMessage.h  configSetMessage.cpp  configSetMessage.h  connectrequest.cpp  connectrequest.h  disconnectrequest.cpp  disconnectrequest.h  sensorDataMessage.cpp  sensorDataMessage.h  sensordata.cpp  sensordata.h  user.cpp  user.h
SafeSpace/client/src/model/structures/Test_Auth_Node/: AuthenticationRequest.cpp  AuthenticationRequest.h  AuthenticationResponse.cpp  AuthenticationResponse.h  auth_client  auth_server  auth_server.cpp  auth_server.h  auth_test  client.cpp  client.h  client_main.cpp  main_test.cpp  server_main.cpp
SafeSpace/client/src/view/: administrationpage.cpp  administrationpage.h  administrationpage.ui  loginpage.cpp  loginpage.h  loginpage.ui  page.cpp  page.h  registeruserpage.cpp  registeruserpage.h  registeruserpage.ui  registrationpage.cpp  registrationpage.h  sensorspage.cpp  sensorspage.h  sensorspage.ui  systemuserspage.cpp  systemuserspage.h  systemuserspage.ui  updateuserpage.cpp  updateuserpage.h  updateuserpage.ui  userlistpage.cpp  userlistpage.h  userlistpage.ui  visualizerspage.cpp  visualizerspage.h  visualizerspage.ui
SafeSpace/client/src/view/account/: accountpage.cpp  accountpage.h  accountpage.ui
SafeSpace/client/src/view/account/subpages/: settings.cpp  settings.h
SafeSpace/client/src/view/administration/: administrationpage.cpp  administrationpage.h  administrationpage.ui
SafeSpace/client/src/view/administration/subpages/: registrationpage.h  registrationpage.ui  systemuserspage.cpp  (+2 more)
SafeSpace/client/src/view/arduinos/: arduinospage.cpp  arduinospage.h  arduinospage.ui
SafeSpace/client/src/view/elements/: button.cpp  button.h  rolescombobox.cpp  rolescombobox.h  sensordatafield.cpp  sensordatafield.h  sensordatafield.ui
SafeSpace/client/src/view/nodes/: nodespage.cpp  nodespage.h  nodespage.ui
SafeSpace/server/: CMakeLists.txt  Makefile  compile_compatible.sh  compile_intermediary.sh  compile_with_class.sh
SafeSpace/server/src/: integration_test  main.cpp  main_integration_test.cpp
SafeSpace/server/src/config/: arduino.txt  auth.txt  bootstrap-dynamic-4handlers.txt  bootstrap-dynamic-custom.txt  bootstrap.txt  events.txt  instructions.txt  inter.txt  proxy.txt  server-firewall.txt  server.txt  storage.txt
SafeSpace/server/src/model/: model.cpp  model.h
SafeSpace/server/src/model/filesystem/: Directory.hpp  FileSystem.cpp  FileSystem.h  Layout.h  Raid1FileSystem.cpp  Raid1FileSystem.h
SafeSpace/server/src/model/managers/: RAID1Manager.cpp  RAID1Manager.h  UsersManager.cpp  UsersManager.h
SafeSpace/server/src/model/structures/: AuthConstants.cpp  DeleteSensorDataResponse.h  DiscoverRequest.h  DiscoverResponse.h  GetSensorDataRequest.h  GetSensorDataResponse.h  GetSystemUsersRequest.h  GetSystemUsersResponse.h  ModifySystemUserRequest.h  ModifySystemUserResponse.h  RegisterSystemUserRequest.h  RegisterSystemUserResponse.h  RunNode.h  RunNodeResponse.h  SensorPacket.h  StopNode.h  StopNodeResponse.h  Token.h  authenticationrequest.h  connectrequest.cpp  connectrequest.h  connectresponse.h  disconnectrequest.h  sensordata.cpp  sensordata.h  user.cpp  user.h
SafeSpace/server/src/nodes/: SafeSpaceServer.cpp  SafeSpaceServer.h
SafeSpace/server/src/nodes/Arduino/: Arduino_Node.cpp  Arduino_Node.h  Arduino_Node_main.cpp  arduino.cpp
SafeSpace/server/src/nodes/Auth/: auth_udp_server.cpp  auth_udp_server.h
SafeSpace/server/src/nodes/Bootstrap/: Bootstrap.cpp  Bootstrap.h  BootstrapAdapters.cpp  BootstrapAdapters.h
SafeSpace/server/src/nodes/CriticalEvents/: CriticalEventsNode.cpp  CriticalEventsNode.h
SafeSpace/server/src/nodes/Intermediary/: IntermediaryNode.cpp  IntermediaryNode.h  Intermediary_Node.cpp
SafeSpace/server/src/nodes/Proxy/: ProxyNode.cpp  ProxyNode.h
SafeSpace/server/src/nodes/Storage/: StorageNode.cpp  StorageNode.h  StrorageNode.cpp
SafeSpace/server/src/nodes/TestClient/: test_udp_client.cpp  test_udp_client.h
SafeSpace/server/src/nodes/interfaces/: FirewallManager.cpp  FirewallManager.h  UDPClient.cpp  UDPClient.h  UDPServer.cpp  UDPServer.h
SafeSpace/server/src/nodes/tools/: firewall_cli.cpp
(+26 files in other folders)
